# smallLM

./: README.md  main.py  pyproject.toml  requirements.txt
data/: data.txt
smalllm/: logger.py
smalllm/config/: config.py
smalllm/dataset/: __init__.py  text_dataset.py
smalllm/model/: __init__.py  attention.py  lm.py  mha.py  mlp.py  transformer.py
smalllm/tokenizer/: tokenizer.py
smalllm/trainer/: __init__.py  train.py  utils.py
